--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^2.13.0",
     "autobind-decorator": "^1.3.4",
     "babel-plugin-import": "^1.4.0",
+    "echarts": "^3.7.2",
     "mobx": "^3.1.0",
     "mobx-react": "^4.1.0",
     "prop-types": "^15.5.10",
