--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "mobx": "^3.1.0",
     "mobx-react": "^4.1.0",
     "prop-types": "^15.5.10",
-    "rc-animate": "^2.4.1",
+    "rc-queue-anim": "^1.3.1",
+    "rc-tween-one": "^1.5.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-motion": "^0.5.2",
     "react-router": "^3.0.2",
     "whatwg-fetch": "^2.0.2"
   },
