--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mobx-react": "^4.1.0",
     "prop-types": "^15.5.10",
     "rc-queue-anim": "^1.3.1",
+    "rc-scroll-anim": "^2.0.2",
     "rc-tween-one": "^1.5.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
