--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rc-tween-one": "^1.5.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-mixin": "^2.0.2",
     "react-router": "^3.0.2",
     "react-websocket": "^1.2.0",
     "whatwg-fetch": "^2.0.2"
